--- a/indexxx.html
+++ b/indexxx.html
@@ -56,7 +56,7 @@
             <div class="collapse navbar-collapse" id="navbar-collapse">
               <ul class="nav navbar-nav navbar-right">
                   <li><a href="#o-co-chodzi">O co chodzi?</a></li>
-                  <li><a href="#jak-sie-spisac">Jak się spisać</a></li>
+                  <li><a href="#jak-sie-spisac">Jak się spisać?</a></li>
                   <li><a href="#wyznanie">Wyznanie</a></li>
                   <li><a href="#pytania-i-odpowiedzi">Pytania</a></li>
                   <li><a href="#po-co-mam-brac-udzial">Po co brać udział?</a></li>
@@ -105,7 +105,7 @@
             <div class="col-md-6">
                 <p class="intro-text">
                     <strong class="intro-text__important intro-text__important--first">
-                        Już za chwilę kolejny spis powszechny.
+                        Już za chwilę kolejny Spis Powszechny.
                     </strong>
                     <br class="hidden"/>
                     <strong class="intro-text__important intro-text__important--second">
@@ -115,18 +115,18 @@
                 <p class="intro-text intro-text--last-census">
                     Według poprzedniego spisu niemal wszyscy wyznajemy katolicyzm.<br/>
                     To powszechne przekonanie ma ogromny wpływ na politykę i nasze życie.<br/>
-                    Czy skoro wszyscy jesteśmy w Kościele, Polska powinna stać się państwem wyznaniowym?
+                    Rzekomo wszyscy jesteśmy w Kościele. Czy to oznacza, że Polska powinna stać się państwem wyznaniowym?
                     Czy episkopat powinien dyktować ustawy?
 
                 </p>
                 <p class="intro-text intro-text--religion">
-                    Przez ostatnie dziesięć lat wiele osób oddaliło się od religii. <br/>
-                    Czas zastanowić się, czy w rubryce wyznanie zaznaczać “<em>katolicyzm</em>”.<br/>
+                    Przez ostatnie dziesięć lat wiele osób oddaliło się od religii i Kościoła katolickiego. <br/>
+                    Zastanów się, czy w rubryce wyznanie zaznaczać “<em>katolicyzm</em>”.<br/>
                     Czas pokazać, w co naprawdę wierzymy.
                 </p>
                 <p class="intro-text intro-text--change">
                     <strong>
-                        Sprawdź, jak się spisać i odpowiedzieć na pytania w zgodzie z własnym sumieniem.
+                        Sprawdź, jak się spisać i odpowiedzieć na pytania w zgodzie ze sobą.
                     </strong>
                 </p>
 
@@ -158,7 +158,7 @@
                     <h5 class="info-box__title">Spisujemy się mieszkaniami</h5>
                     <p>Każde mieszkanie wypełnia jeden formularz online.</p>
                     <p>Upewnij się, że przy tym będziesz.</p>
-                    <p><strong>WAŻNE: Spis jest anonimowy</strong></p>
+                    <p><strong>Nie odmawiaj odpowiedzi. Spis jest anonimowy.</strong></p>
                 </article>
             </div>
             <div class="col-lg-3 col-md-6 col-xs-12 info-box">
@@ -221,7 +221,7 @@
             <article class="col-md-6 how-to-prepare">
                 <h2 class="sr-only">Czy trzeba się przygotować</h2>
                 <p class="how-to-prepare__highlight">
-                    Jedno mieszkanie = Jeden formularz
+                    Jedno mieszkanie = jeden formularz
                 </p>
                 <p class="how-to-prepare__text">
                     <strong>Na jedno mieszkanie/ dom jednorodzinny przypada jeden formularz spisowy.</strong>
@@ -229,7 +229,9 @@
                     W ostatniej są formularze dla poszczególnych osób. Tam znajduje się m.in. pytanie o wyznanie.
                 </p>
                 <p class="how-to-prepare__text">
-                    Najlepiej, żeby każdy wypełnił tę część osobiście, więc upewnij się, że przy tym będziesz.
+                    <strong>
+                        Najlepiej, żeby każdy wypełnił tę część osobiście, więc upewnij się, że przy tym będziesz.
+                    </strong>
                 </p>
             </article>
         </div>
@@ -289,7 +291,7 @@
                 <p class="how-to-religion__text">Jeśli wybierzesz odpowiedź 1, pojawi się lista związków wyznaniowych.</p>
                 <p class="how-to-religion__text"><strong>I tutaj sprawa się komplikuje. </strong></p>
                 <p class="how-to-religion__text">
-                    Na początku na liście pojawi się 8 największych kościołów w Polsce.
+                    Na początku na liście pojawi się 7 największych kościołów w Polsce.
                     Jeśli nie znajdujesz na liście wyznania, które chcesz zadeklarować
                     <strong>możesz je wpisać własnymi słowami</strong>.
                     Żeby to zrobić:
@@ -299,7 +301,7 @@
                         Wybierz odpowiedź “<em>inne wyznanie (podać jakie)</em>”.
                     </li>
                     <li class="how-to-religion__option">
-                        Rozwinie się dodatkowa lista. Na niej znajdziesz pozostałe kościoły i ponownie odpowiedź
+                        Rozwinie się dodatkowa lista. Na niej znajdziesz pozostałe Kościoły i ponownie odpowiedź
                         “<em>inny (podać jaki)</em>”.
                     </li>
                     <li class="how-to-religion__option">
@@ -317,27 +319,33 @@
                 <h2 class="census-hints__title">Zwróć uwagę:</h2>
                 <ol class="census-hints__list">
                     <li class="census-hints__item">
-                        Nie zachęcamy do odmowy odpowiedzi. Podawane publicznie wyniki wykluczają takie osoby.
+                        Nie odmawiaj odpowiedzi. Jeśli chcesz, żeby Twój głos się liczył, odpowiedz w zgodzie ze sobą.
                     </li>
                     <li class="census-hints__item">
                         Jeśli nie masz wątpliwości, że należysz do konkretnego wyznania, wybierz je z listy.
-                        <strong>Warto zaznaczyć - formalna przynależność do wyznania (np. chrzest w kościele katolickim)
-                            nie oznacza, że musisz podawać się za jego członka/członkinię.</strong> Odpowiadaj tak,
-                        jak się czujesz. Odpowiedź nie musi zgadzać się z zapisami w księgach parafialnych.
+                        <strong>
+                            Warto zaznaczyć - chrzest (np. w kościele katolickim) nie oznacza, że musisz podawać
+                            się za jego członka/członkinię.
+                        </strong>
+                        Odpowiadaj tak, jak się czujesz.
+                        Pytanie o wyznanie to pytanie o <strong>poczucie przynależności</strong>.
                     </li>
                     <li class="census-hints__item">
-                        Jeśli jesteś osobą bezwyznaniową agnostykiem/agnostyczką lub ateistą/ateistką,
-                        masz dwie możliwości:
-                        <ol class="non-believers-hints">
-                            <li class="non-believers-hint">
-                                wybrać opcję “<em>nie należę do żadnego wyznania</em>”
-                            </li>
-                            <li class="non-believers-hint">
-                                wybrać “<em>należę do wyznania</em>” i wpisać “<em>ateizm</em>” lub “<em>agnostycyzm</em>”
-                                w pole “<em>inny (podać jaki)</em>”. Pozwoli to dokładniej policzyć osoby bezwyznaniowe i
-                                zwiększyć ich widoczność w społeczeństwie.
-                            </li>
-                        </ol>
+                        Jeśli jesteś osobą bezwyznaniową agnostykiem/ agnostyczką lub ateistą/ ateistką,
+                        <strong>wybierz opcję “<em>nie należę do żadnego wyznania</em>”</strong>.
+<!--                        <ol class="non-believers-hints">-->
+<!--                            <li class="non-believers-hint">-->
+<!--                                wybrać opcję “<em>nie należę do żadnego wyznania</em>”-->
+<!--                            </li>-->
+<!--                            <li class="non-believers-hint">-->
+<!--                                wybrać “<em>należę do wyznania</em>” i wpisać “<em>ateizm</em>” lub “<em>agnostycyzm</em>”-->
+<!--                                w pole “<em>inny (podać jaki)</em>”. Pozwoli to dokładniej policzyć osoby bezwyznaniowe i-->
+<!--                                zwiększyć ich widoczność w społeczeństwie.-->
+<!--                            </li>-->
+<!--                        </ol>-->
+                    </li>
+                    <li class="census-hints__item">
+                        Jeśli nadal masz wątpliwości, pytania i odpowiedzi w następnej sekcji pomogą Ci je rozwiać.
                     </li>
                 </ol>
             </article>
@@ -358,7 +366,7 @@
             <div class="col-md-6 col-md-offset-6">
                 <details class="faq-question">
                     <summary class="faq-question__summary">
-                        <h4>Jestem ochrzczony/a, ale od lat nie chodzę do kościoła, czy muszę zaznaczać kościół rzymskokatolicki?</h4>
+                        <h4>Jestem ochrzczony/a, ale od lat nie chodzę do kościoła, czy muszę zaznaczać Kościół rzymskokatolicki?</h4>
                     </summary>
                     <p>
                         Jeśli nie czujesz się związana/y z instytucją, do której “<em>formalnie</em>” należysz, możesz
@@ -368,17 +376,19 @@
                     <li>chrześcijaństwo - jeśli wierzysz w Jezusa Chrystusa, ale nie chcesz być liczony/a jako katolik/ katoliczka</li>
                     <li>teizm - jeśli wierzysz w osobowego Boga, który ma wpływ na Twoje życie</li>
                     <li>deizm - jeśli wierzysz w bezosobowego boga, który nie wpływa na nasze życie</li>
-                    <li>agnostycyzm - jeśli nie rozstrzygasz kwestii istnienia boga/ bogów lub nie umiesz odpowiedzieć na pytanie, czy istnieją</li>
-                    <li>ateizm - jeśli jesteś przekonany/a, że bogowie nie istnieją.</li>
+                    <li>
+                        zaznaczyć “<em>nie należę do żadnego wyznania</em>” - jeśli religia nie ma już dla Ciebie znaczenia,
+                        nie czujesz się częścią żadnej wspólnoty religijnej, nie wiesz czy bogowie istnieją lub nie wierzysz w ich istnienie.
+                    </li>
                 </ul>
             </details>
                 <details class="faq-question">
                     <summary class="faq-question__summary">
-                        <h4>Wierzę w Boga, ale coraz dalej mi do kościoła katolickiego i nie popieram jego polityki. Jak to wyrazić?</h4>
+                        <h4>Wierzę w Boga, ale coraz dalej mi do Kościoła katolickiego i nie popieram jego polityki. Jak to wyrazić?</h4>
                     </summary>
                     <p>
                         Możesz wpisać “<em>chrześcijaństwo</em>”. Deklarujesz wtedy wiarę w Boga i Jezusa Chrystusa, ale nie
-                        jesteś liczony/a jako członek/ członkini kościoła katolickiego.
+                        jesteś liczony/a jako członek/ członkini Kościoła katolickiego.
                     </p>
                 </details>
                 <details class="faq-question">
@@ -386,9 +396,7 @@
                         <h4>Czy w spisie jest pole dla ateistów/ ateistek i agnostyków/ agnostyczek?</h4>
                     </summary>
                     <p>
-                        Na liście odpowiedzi nie ma ateizmu i agnostycyzmu. Możesz zaznaczyć “<em>nie należę do żadnego
-                        wyznania</em>” lub po wybraniu odpowiedzi “<em>należę do wyznania</em>” wpisać
-                        “<em>ateizm</em>” / “<em>agnostycyzm</em>”.
+                        Na liście odpowiedzi nie ma ateizmu i agnostycyzmu. Wybierz opcję “<em>nie należę do żadnego wyznania</em>”..
                     </p>
                 </details>
                 <details class="faq-question">
@@ -420,7 +428,7 @@
                         Nie, odpowiedź na to pytanie nie zostanie przypisana do numeru PESEL. Spis jest anonimowy.
                         Dane uczestników zostają w GUSie, który publikuje tylko statystyki odpowiedzi. Na przykład -
                         procenty poszczególnych wyznań w całym kraju / województwie. Więcej o anonimowości spisu
-                        poczytaj na stronie <a href="https://example.com" target="_blank">[link]</a>.
+                        poczytaj na stronie <a href="https://spis.gov.pl/bezpieczenstwo-danych/" target="_blank">spis.gov.pl/bezpieczenstwo-danych/</a>.
                     </p>
                 </details>
 
@@ -430,13 +438,11 @@
                     </summary>
                     <p>
                         Bo tutaj dane oficjalne najbardziej odbiegają od rzeczywistości i tworzą fałszywy obraz
-                        jednolicie katolickiej Polski. Według obliczeń samego kościoła katolickiego i badań
-                        (np. CBOSu), tylko 46% Polaków i Polek regularnie uczestniczy w obrzędach religijnych.
-                        Nawet przed epidemią koronawirusa 16% nie uczestniczyło w nich w ogóle, a kolejne 21% robiło
-                        to najwyżej kilka razy w roku. Jednocześnie, wobec ostatnich wydarzeń i wychodzących na
-                        światło dzienne faktów, coraz więcej osób poddaje refleksji swój stosunek do religii i
-                        kościoła. Spis Powszechny jest idealną okazją, żeby sprawdzić, jak bardzo sformułowanie
-                        “Polak-katolik” odbiega od prawdy.
+                        jednolicie katolickiej Polski. Według obliczeń samego Kościoła katolickiego tylko około
+                        27% Polaków i Polek uczestniczy w obrzędach religijnych. Jednocześnie, wobec ostatnich
+                        wydarzeń i wychodzących na światło dzienne faktów, coraz więcej osób poddaje refleksji
+                        swój stosunek do religii i kościoła. Spis Powszechny jest idealną okazją, żeby sprawdzić,
+                        jak bardzo sformułowanie “Polak-katolik” odbiega od prawdy.
                     </p>
                 </details>
 
@@ -470,7 +476,7 @@
                     <p class="why-would-i__text">
                         A wyznanie ma szczególne znaczenie. Od lat mówi się, że 96% Polaków i Polek to katolicy i
                         katoliczki (dane ze spisu w 2011 roku). Trudno uwierzyć, że tak jest naprawdę, skoro tylko
-                        46% z nas regularnie uczestniczy we mszach.
+                        27% z nas regularnie uczestniczy we mszach.
                     </p>
                     <p class="why-would-i__text">
                         Tylko osobisty udział w spisie zapewnia, że udzielisz takiej odpowiedzi, jakiej zechcesz.
@@ -504,17 +510,17 @@
             </div>
         </div>
     </aside>
-    <section class="section partners">
-        <div class="container">
-            <h2 class="partners__title">Partnerzy</h2>
-            <ul class="partners__list">
-                <li class="partners__box"></li>
-                <li class="partners__box"></li>
-                <li class="partners__box"></li>
-                <li class="partners__box"></li>
-            </ul>
-        </div>
-    </section>
+<!--    <section class="section partners">-->
+<!--        <div class="container">-->
+<!--            <h2 class="partners__title">Partnerzy</h2>-->
+<!--            <ul class="partners__list">-->
+<!--                <li class="partners__box"></li>-->
+<!--                <li class="partners__box"></li>-->
+<!--                <li class="partners__box"></li>-->
+<!--                <li class="partners__box"></li>-->
+<!--            </ul>-->
+<!--        </div>-->
+<!--    </section>-->
 </main>
 <footer class="footer">
     <div class="container footer__content">
