--- a/indexxx.html
+++ b/indexxx.html
@@ -131,7 +131,7 @@
                 </p>
 
                 <footer class="intro-footer">
-                    <button class="btn btn-fill btn--cta intro-footer__cta">Liczę się</button>
+                    <a class="btn btn-fill btn--cta intro-footer__cta" href="#jak-sie-spisac">Liczę się</a>
                 </footer>
             </div>
         </div>
