--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Chcę się liczyć</title>
     <meta property="og:url" content="https://chcesieliczyc.pl" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="chcesieliczyc.pl" />
+    <meta property="og:title" content="Chcę się liczyć" />
     <meta property="og:description" content="Spis Powszechny 2021 – pokaż w co naprawdę wierzysz. Sprawdź, jak odpowiedzieć na pytania w zgodzie ze sobą." />
     <meta property="og:image" content="https://chcesieliczyc.pl/assets/img/chcesieliczyc_pl.png" />
     <!-- Google Tag Manager -->
