--- a/indexxx.html
+++ b/indexxx.html
@@ -12,14 +12,14 @@
     <title>Chcę się liczyć</title>
     <meta property="og:url" content="https://chcesieliczyc.pl" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="chcesieliczyc.pl" />
+    <meta property="og:title" content="Chcę się liczyć" />
     <meta property="og:description" content="Spis Powszechny 2021 – pokaż w co naprawdę wierzysz. Sprawdź, jak odpowiedzieć na pytania w zgodzie ze sobą." />
     <meta property="og:image" content="https://chcesieliczyc.pl/assets/img/chcesieliczyc_pl.png" />
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="assets/css/gsdk.css" rel="stylesheet" />
-    <link href="assets/css/styles-005.css" rel="stylesheet" />
+    <link href="assets/css/styles.css" rel="stylesheet" />
     <!--     Google Fonts     -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&display=swap" rel="stylesheet">
