--- a/polityka-prywatnosci/index.html
+++ b/polityka-prywatnosci/index.html
@@ -11,14 +11,14 @@
     <title>Chcę się liczyć - Polityka Prywatności</title>
     <meta property="og:url" content="https://chcesieliczyc.pl" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="chcesieliczyc.pl - Polityka Prywatności" />
+    <meta property="og:title" content="Chcę się liczyć - Polityka Prywatności" />
     <meta property="og:description" content="Spis Powszechny 2021 – pokaż w co naprawdę wierzysz. Sprawdź, jak odpowiedzieć na pytania w zgodzie ze sobą." />
     <meta property="og:image" content="https://chcesieliczyc.pl/assets/img/chcesieliczyc_pl.png" />
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="../assets/css/gsdk.css" rel="stylesheet" />
-    <link href="../assets/css/styles-005.css" rel="stylesheet" />
+    <link href="../assets/css/styles.css" rel="stylesheet" />
     <!--     Google Fonts     -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&display=swap" rel="stylesheet">
@@ -169,10 +169,19 @@ b) Facebook Inc. Hacker Way, Menlo Park, California 94025, USA; developers.faceb
 <footer class="footer">
     <div class="container footer__content">
         <p class="footer__copyrights">
+            <img src="../assets/img/logo-invert.svg" alt="Chcę się Liczyć" />
             &copy; 2021 Inicjatywa “Chcę się liczyć”
         </p>
         <p class="footer__contact">
-            <a href="mailto:mail@example.com">mailto@example.com</a>
+            <a href="mailto:kontaktchsl@protonmail.com" class="footer-link footer-link--email">kontaktchsl@protonmail.com</a>
+            &nbsp;
+            <a href="https://facebook.com/chcesieliczyc" class="footer-link footer-link--facebook" target="_blank">
+                <img src="../assets/icon/facebook-invert-icon.svg" alt="Facebook" />
+            </a>
+            &nbsp;
+            <a href="https://twitter.com/chcesieliczyc" class="footer-link footer-link--tweeter" target="_blank">
+                <img src="../assets/icon/twitter-invert-icon.svg" alt="Twitter" />
+            </a>
         </p>
     </div>
 </footer>
