--- a/indexxx.html
+++ b/indexxx.html
@@ -488,7 +488,7 @@
     <aside class="social-bottom">
         <div class="container">
             <div class="row">
-                <div class="col-md-6 col-md-offset-1 social-bottom__wrapper">
+                <div class="col-lg-7 col-md-8 col-sm-10 col-xs-12 col-md-offset-1 social-bottom__wrapper">
                     <h2 class="social-bottom__title">Udostępnij:</h2>
                     <a
                             title="Podziel się na Facebooku"
