--- a/indexxx.html
+++ b/indexxx.html
@@ -113,8 +113,8 @@
                     </strong>
                 </p>
                 <p class="intro-text intro-text--last-census">
-                    Według poprzedniego spisu niemal wszyscy wyznajemy katolicyzm.<br/>
-                    To powszechne przekonanie ma ogromny wpływ na politykę i nasze życie.<br/>
+                    Według poprzedniego spisu niemal wszyscy wyznajemy katolicyzm.
+                    To powszechne przekonanie ma ogromny wpływ na politykę i nasze życie.
                     Rzekomo wszyscy jesteśmy w Kościele. Czy to oznacza, że Polska powinna stać się państwem wyznaniowym?
                     Czy episkopat powinien dyktować ustawy?
 
@@ -144,11 +144,11 @@
                     <img src="assets/icon/calendar-icon.svg" class="info-box__icon" alt="Kiedy?"/>
                     <h5 class="info-box__title">Raz na 10 lat</h5>
                     <p>
-                        Pomóż pokazać, jaka jest dzisiaj Polska. Dane ze spisu na następne 10 lat utrwalą obraz tego,
-                        jak wygląda nasz kraj i wpłyną na kształt relacji państwo - Kościół.
+                        Pomóż pokazać, jaka jest dzisiaj Polska. Dane ze spisu <strong>na następne 10 lat</strong>
+                        utrwalą obraz tego, jak wygląda nasz kraj i wpłyną na kształt relacji państwo - Kościół.
                     </p>
                     <p>
-                        Według danych ze Spisu 2011 niemal wszyscy wyznajemy katolicyzm.<br/>
+                        Bez Ciebie obraz będzie niepełny.
                     </p>
                 </article>
             </div>
@@ -156,7 +156,7 @@
                 <article class="info-box__container">
                     <img src="assets/icon/house-icon.svg" class="info-box__icon" alt="Gdzie?"/>
                     <h5 class="info-box__title">Spisujemy się mieszkaniami</h5>
-                    <p>Każde mieszkanie wypełnia jeden formularz online.</p>
+                    <p>Każde mieszkanie wypełnia <strong>jeden formularz online</strong>.</p>
                     <p>Upewnij się, że przy tym będziesz.</p>
                     <p><strong>Nie odmawiaj odpowiedzi. Spis jest anonimowy.</strong></p>
                 </article>
@@ -268,8 +268,8 @@
             <article class="col-md-9 col-md-offset-3 how-to-religion__wrapper">
                 <h2 class="target-indicator how-to-religion__title">Pytanie o wyznanie</h2>
                 <p class="how-to-religion__text">
-                    Pytanie o wyznanie znajdziesz w trzeciej części formularza spisowego. Zawiera ona
-                    “<em>formularze osobowe</em>” dotyczące poszczególnych domowników. Pytanie zadawane jest
+                    <strong>Pytanie o wyznanie</strong> znajdziesz <strong>w trzeciej części formularza spisowego</strong>.
+                    Zawiera ona “<em>formularze osobowe</em>” dotyczące poszczególnych domowników. Pytanie zadawane jest
                     <strong>zaraz po tych o narodowość i język</strong>.
                     To właśnie tutaj łatwo się pogubić i udzielić odpowiedzi niezgodnej z własnymi poglądami.
 
@@ -278,7 +278,7 @@
                     i przemyśleć odpowiedź.
 
                 </p>
-                <p class="how-to-religion__text">Przeczytaj uważnie.</p>
+                <p class="how-to-religion__text"><strong>Przeczytaj uważnie.</strong></p>
                 <p class="how-to-religion__text">
                     Pytanie składa się z dwóch części. W pierwszej masz do wyboru jedną z trzech odpowiedzi:
                 </p>
@@ -292,7 +292,7 @@
                 <p class="how-to-religion__text"><strong>I tutaj sprawa się komplikuje. </strong></p>
                 <p class="how-to-religion__text">
                     Na początku na liście pojawi się 7 największych kościołów w Polsce.
-                    Jeśli nie znajdujesz na liście wyznania, które chcesz zadeklarować
+                    Jeśli nie znajdujesz na liście wyznania, które chcesz zadeklarować,
                     <strong>możesz je wpisać własnymi słowami</strong>.
                     Żeby to zrobić:
                 </p>
@@ -324,7 +324,7 @@
                     <li class="census-hints__item">
                         Jeśli nie masz wątpliwości, że należysz do konkretnego wyznania, wybierz je z listy.
                         <strong>
-                            Warto zaznaczyć - chrzest (np. w kościele katolickim) nie oznacza, że musisz podawać
+                            Warto zaznaczyć - chrzest (np. w Kościele katolickim) nie oznacza, że musisz podawać
                             się za jego członka/członkinię.
                         </strong>
                         Odpowiadaj tak, jak się czujesz.
@@ -396,7 +396,7 @@
                         <h4>Czy w spisie jest pole dla ateistów/ ateistek i agnostyków/ agnostyczek?</h4>
                     </summary>
                     <p>
-                        Na liście odpowiedzi nie ma ateizmu i agnostycyzmu. Wybierz opcję “<em>nie należę do żadnego wyznania</em>”..
+                        Na liście odpowiedzi nie ma ateizmu i agnostycyzmu. Wybierz opcję “<em>nie należę do żadnego wyznania</em>”…
                     </p>
                 </details>
                 <details class="faq-question">
@@ -441,7 +441,7 @@
                         jednolicie katolickiej Polski. Według obliczeń samego Kościoła katolickiego tylko około
                         27% Polaków i Polek uczestniczy w obrzędach religijnych. Jednocześnie, wobec ostatnich
                         wydarzeń i wychodzących na światło dzienne faktów, coraz więcej osób poddaje refleksji
-                        swój stosunek do religii i kościoła. Spis Powszechny jest idealną okazją, żeby sprawdzić,
+                        swój stosunek do religii i Kościoła. Spis Powszechny jest idealną okazją, żeby sprawdzić,
                         jak bardzo sformułowanie “Polak-katolik” odbiega od prawdy.
                     </p>
                 </details>
