--- a/indexxx.html
+++ b/indexxx.html
@@ -1,6 +1,6 @@
 <!doctype html>
-<html lang="pl">
-<!--<html lang="pl" class="debug">-->
+<!--<html lang="pl">-->
+<html lang="pl" class="debug">
 <head>
     <meta charset="utf-8" />
     <link rel="icon" type="image/png" href="assets/icon/favicon.ico">
@@ -120,7 +120,7 @@
 
                 </p>
                 <p class="intro-text intro-text--religion">
-                    Przez ostatnie dziesięć lat wiele osób oddaliło się od religii i Kościoła katolickiego. <br/>
+                    Przez ostatnie dziesięć lat wiele osób oddaliło się od religii i Kościoła katolickiego.
                     Zastanów się, czy w rubryce wyznanie zaznaczać “<em>katolicyzm</em>”.<br/>
                     Czas pokazać, w co naprawdę wierzymy.
                 </p>
@@ -396,7 +396,7 @@
                         <h4>Czy w spisie jest pole dla ateistów/ ateistek i agnostyków/ agnostyczek?</h4>
                     </summary>
                     <p>
-                        Na liście odpowiedzi nie ma ateizmu i agnostycyzmu. Wybierz opcję “<em>nie należę do żadnego wyznania</em>”…
+                        Na liście odpowiedzi nie ma ateizmu i agnostycyzmu. Wybierz opcję “<em>nie należę do żadnego wyznania</em>”.
                     </p>
                 </details>
                 <details class="faq-question">
@@ -488,7 +488,7 @@
     <aside class="social-bottom">
         <div class="container">
             <div class="row">
-                <div class="col-lg-7 col-md-8 col-sm-10 col-xs-12 col-md-offset-1 social-bottom__wrapper">
+                <div class="col-xl-6 col-lg-7 col-md-8 col-sm-10 col-xs-12 col-md-offset-1 social-bottom__wrapper">
                     <h2 class="social-bottom__title">Udostępnij:</h2>
                     <a
                             title="Podziel się na Facebooku"
