--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <a
                     title="Podziel się na Facebooku"
                     class="social__button social__button--facebook"
-                    href="https://www.facebook.com/sharer.php?u=https%3A%2F%2Ffacebook.com%2Fchcesieliczyc"
+                    href="https://www.facebook.com/sharer.php?u=https%3A%2F%2Fwww.facebook.com%2Fchcesieliczyc%2Fposts%2F119108793563976"
                     target="_blank">
                 <img src="assets/icon/facebook-icon.svg" alt="Facebook">
             </a>
@@ -493,7 +493,7 @@
                     <a
                             title="Podziel się na Facebooku"
                             class="btn social-bottom__button social-bottom__button--facebook"
-                            href="https://www.facebook.com/sharer.php?u=https%3A%2F%2Ffacebook.com%2Fchcesieliczyc"
+                            href="https://www.facebook.com/sharer.php?u=https%3A%2F%2Fwww.facebook.com%2Fchcesieliczyc%2Fposts%2F119108793563976"
                             target="_blank">
                         <img src="assets/icon/facebook-invert-icon.svg" alt="[FB]" />
                         Facebook
