--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
+<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v10.0" nonce="TFEu6Jsm"></script>
 <aside class="cookies-and-privacy" style="display: none">
     <p class="container">
         Serwis wykorzystuje pliki cookies. Korzystając z naszej strony wyrażasz zgodę na ich wykorzystywanie. <br />
@@ -74,11 +76,11 @@
 <main class="main">
     <div class="section social">
         <p class="container social__container">
-           <strong class="social__callout">Podziel się:</strong>
+            <strong class="social__callout">Podziel się:</strong>
             <a
                     title="Podziel się na Facebooku"
                     class="social__button social__button--facebook"
-                    href="https://www.facebook.com/sharer.php?u=https%3A%2F%2Fwww.facebook.com%2Fchcesieliczyc%2Fposts%2F119108793563976"
+                    href="https://www.facebook.com/chcesieliczyc/posts/119108793563976"
                     target="_blank">
                 <img src="assets/icon/facebook-icon.svg" alt="Facebook">
             </a>
@@ -493,7 +495,7 @@
                     <a
                             title="Podziel się na Facebooku"
                             class="btn social-bottom__button social-bottom__button--facebook"
-                            href="https://www.facebook.com/sharer.php?u=https%3A%2F%2Fwww.facebook.com%2Fchcesieliczyc%2Fposts%2F119108793563976"
+                            href="https://www.facebook.com/chcesieliczyc/posts/119108793563976"
                             target="_blank">
                         <img src="assets/icon/facebook-invert-icon.svg" alt="[FB]" />
                         Facebook
