--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <a
                     title="Podziel się na Facebooku"
                     class="social__button social__button--facebook"
-                    href="https://www.facebook.com/chcesieliczyc/posts/119108793563976"
+                    href="https://www.facebook.com/sharer.php?u=https%3A%2F%2Fchcesieliczyc.pl"
                     target="_blank">
                 <img src="assets/icon/facebook-icon.svg" alt="Facebook">
             </a>
@@ -495,7 +495,7 @@
                     <a
                             title="Podziel się na Facebooku"
                             class="btn social-bottom__button social-bottom__button--facebook"
-                            href="https://www.facebook.com/chcesieliczyc/posts/119108793563976"
+                            href="https://www.facebook.com/sharer.php?u=https%3A%2F%2Fchcesieliczyc.pl"
                             target="_blank">
                         <img src="assets/icon/facebook-invert-icon.svg" alt="[FB]" />
                         Facebook
