how to prepare info

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
-<html lang="pl">
-<!--<html lang="pl" class="debug">-->
+<!--<html lang="pl">-->
+<html lang="pl" class="debug">
 <head>
     <meta charset="utf-8" />
     <link rel="icon" type="image/png" href="assets/icon/favicon.ico">
