--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 </p>
                 <p class="intro-text intro-text--religion">
                     Przez ostatnie dziesięć lat wiele osób oddaliło się od religii i Kościoła katolickiego.
-                    Zastanów się, czy w rubryce wyznanie zaznaczać “<em>katolicyzm</em>”.<br/>
+                    Zastanów się, czy w rubryce wyznanie zaznaczać „katolicyzm”.<br/>
                     Czas pokazać, w co naprawdę wierzymy.
                 </p>
                 <p class="intro-text intro-text--change">
@@ -269,12 +269,12 @@
                 <h2 class="target-indicator how-to-religion__title">Pytanie o wyznanie</h2>
                 <p class="how-to-religion__text">
                     <strong>Pytanie o wyznanie</strong> znajdziesz <strong>w trzeciej części formularza spisowego</strong>.
-                    Zawiera ona “<em>formularze osobowe</em>” dotyczące poszczególnych domowników. Pytanie zadawane jest
+                    Zawiera ona „formularze osobowe” dotyczące poszczególnych domowników. Pytanie zadawane jest
                     <strong>zaraz po tych o narodowość i język</strong>.
                     To właśnie tutaj łatwo się pogubić i udzielić odpowiedzi niezgodnej z własnymi poglądami.
 
                     <strong>Wiele osób wpisuje też swoje wyznanie nie zastanawiając się nad tym głębiej</strong>,
-                    z rozpędu, “<em>bo zawsze tak było</em>”. Warto nie ulegać takiemu mechanicznemu nawykowi
+                    z rozpędu, „bo zawsze tak było”. Warto nie ulegać takiemu mechanicznemu nawykowi
                     i przemyśleć odpowiedź.
 
                 </p>
@@ -298,11 +298,11 @@
                 </p>
                 <ol class="how-to-religion__options">
                     <li class="how-to-religion__option">
-                        Wybierz odpowiedź “<em>inne wyznanie (podać jakie)</em>”.
+                        Wybierz odpowiedź „inne wyznanie (podać jakie)”.
                     </li>
                     <li class="how-to-religion__option">
                         Rozwinie się dodatkowa lista. Na niej znajdziesz pozostałe Kościoły i ponownie odpowiedź
-                        “<em>inny (podać jaki)</em>”.
+                        „inny (podać jaki)”.
                     </li>
                     <li class="how-to-religion__option">
                         <strong>
@@ -332,14 +332,14 @@
                     </li>
                     <li class="census-hints__item">
                         Jeśli jesteś osobą bezwyznaniową agnostykiem/ agnostyczką lub ateistą/ ateistką,
-                        <strong>wybierz opcję “<em>nie należę do żadnego wyznania</em>”</strong>.
+                        <strong>wybierz opcję „nie należę do żadnego wyznania”</strong>.
 <!--                        <ol class="non-believers-hints">-->
 <!--                            <li class="non-believers-hint">-->
-<!--                                wybrać opcję “<em>nie należę do żadnego wyznania</em>”-->
+<!--                                wybrać opcję „nie należę do żadnego wyznania”-->
 <!--                            </li>-->
 <!--                            <li class="non-believers-hint">-->
-<!--                                wybrać “<em>należę do wyznania</em>” i wpisać “<em>ateizm</em>” lub “<em>agnostycyzm</em>”-->
-<!--                                w pole “<em>inny (podać jaki)</em>”. Pozwoli to dokładniej policzyć osoby bezwyznaniowe i-->
+<!--                                wybrać „należę do wyznania” i wpisać „ateizm” lub „agnostycyzm”-->
+<!--                                w pole „inny (podać jaki)”. Pozwoli to dokładniej policzyć osoby bezwyznaniowe i-->
 <!--                                zwiększyć ich widoczność w społeczeństwie.-->
 <!--                            </li>-->
 <!--                        </ol>-->
@@ -369,7 +369,7 @@
                         <h4>Jestem ochrzczony/a, ale od lat nie chodzę do kościoła, czy muszę zaznaczać Kościół rzymskokatolicki?</h4>
                     </summary>
                     <p>
-                        Jeśli nie czujesz się związana/y z instytucją, do której “<em>formalnie</em>” należysz, możesz
+                        Jeśli nie czujesz się związana/y z instytucją, do której „formalnie” należysz, możesz
                         określić się inaczej. Na przykład:
                     </p>
                 <ul>
@@ -377,7 +377,7 @@
                     <li>teizm - jeśli wierzysz w osobowego Boga, który ma wpływ na Twoje życie</li>
                     <li>deizm - jeśli wierzysz w bezosobowego boga, który nie wpływa na nasze życie</li>
                     <li>
-                        zaznaczyć “<em>nie należę do żadnego wyznania</em>” - jeśli religia nie ma już dla Ciebie znaczenia,
+                        zaznaczyć „nie należę do żadnego wyznania” - jeśli religia nie ma już dla Ciebie znaczenia,
                         nie czujesz się częścią żadnej wspólnoty religijnej, nie wiesz czy bogowie istnieją lub nie wierzysz w ich istnienie.
                     </li>
                 </ul>
@@ -387,7 +387,7 @@
                         <h4>Wierzę w Boga, ale coraz dalej mi do Kościoła katolickiego i nie popieram jego polityki. Jak to wyrazić?</h4>
                     </summary>
                     <p>
-                        Możesz wpisać “<em>chrześcijaństwo</em>”. Deklarujesz wtedy wiarę w Boga i Jezusa Chrystusa, ale nie
+                        Możesz wpisać „chrześcijaństwo”. Deklarujesz wtedy wiarę w Boga i Jezusa Chrystusa, ale nie
                         jesteś liczony/a jako członek/ członkini Kościoła katolickiego.
                     </p>
                 </details>
@@ -396,7 +396,7 @@
                         <h4>Czy w spisie jest pole dla ateistów/ ateistek i agnostyków/ agnostyczek?</h4>
                     </summary>
                     <p>
-                        Na liście odpowiedzi nie ma ateizmu i agnostycyzmu. Wybierz opcję “<em>nie należę do żadnego wyznania</em>”.
+                        Na liście odpowiedzi nie ma ateizmu i agnostycyzmu. Wybierz opcję „nie należę do żadnego wyznania”.
                     </p>
                 </details>
                 <details class="faq-question">
@@ -404,9 +404,9 @@
                         <h4>Dlaczego nie mogę zaznaczyć po prostu inne?</h4>
                     </summary>
                     <p>
-                        Formularz spisowy zakłada, że po wybraniu odpowiedzi “<em>inny (podać jaki)</em>”
+                        Formularz spisowy zakłada, że po wybraniu odpowiedzi „inny (podać jaki)”
                         wpisujesz odpowiedź własnymi słowami. Jeśli nie chcesz się określać, możesz w to
-                        pole wpisać po prostu “<em>inne</em>” / “<em>inny</em>”.
+                        pole wpisać po prostu „inne” / „inny”.
                     </p>
                 </details>
                 <details class="faq-question">
@@ -442,7 +442,7 @@
                         27% Polaków i Polek uczestniczy w obrzędach religijnych. Jednocześnie, wobec ostatnich
                         wydarzeń i wychodzących na światło dzienne faktów, coraz więcej osób poddaje refleksji
                         swój stosunek do religii i Kościoła. Spis Powszechny jest idealną okazją, żeby sprawdzić,
-                        jak bardzo sformułowanie “Polak-katolik” odbiega od prawdy.
+                        jak bardzo sformułowanie „olak-katoli” odbiega od prawdy.
                     </p>
                 </details>
 
@@ -526,7 +526,7 @@
     <div class="container footer__content">
         <p class="footer__copyrights">
             <img src="assets/img/logo-invert.svg" alt="Chcę się Liczyć" />
-            &copy; 2021 Inicjatywa “Chcę się liczyć”
+            &copy; 2021 Inicjatywa „hcę się liczy”
         </p>
         <p class="footer__contact">
             <a href="mailto:kontaktchsl@protonmail.com" class="footer-link footer-link--email">kontaktchsl@protonmail.com</a>
