--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
     <div class="container footer__content">
         <p class="footer__copyrights">
             <img src="assets/img/logo-invert.svg" alt="Chcę się Liczyć" />
-            &copy; 2021 Inicjatywa „hcę się liczy”
+            &copy; 2021 Inicjatywa „Chcę się liczyć”
         </p>
         <p class="footer__contact">
             <a href="mailto:kontaktchsl@protonmail.com" class="footer-link footer-link--email">kontaktchsl@protonmail.com</a>
