--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <a
                     class="social__button social__button--twitter"
                     title="Zatłituj o nas"
-                    href="https://twitter.com/intent/tweet?original_referer=https://chcesieliczyc.pl&text=Jakie%20wyznanie%20podasz%20w%20Spisie%20Powszechnym%3F%0A%0AWejd%C5%BA%20na%20chcesieliczyc.pl.%20Zobacz%2C%20jak%20si%C4%99%20spisa%C4%87%20i%20odpowiedzie%C4%87%20na%20pytanie%20o%20wyznanie%20w%20zgodzie%20ze%20sob%C4%85.%0A%0AJeszcze%20si%C4%99%20wahasz%3F%20Odpowiemy%20na%20Twoje%20pytania%20i%20w%C4%85tpliwo%C5%9Bci.%0A%0Achcesieliczyc.pl%20%23chcesieliczyc%20%40chcesieliczyc"
+                    href="https://twitter.com/intent/tweet?original_referer=https://chcesieliczyc.pl&text=Jakie%20wyznanie%20podasz%20w%20Spisie%20Powszechnym%3F%0A%0AWejd%C5%BA%20na%20chcesieliczyc.pl.%20Zobacz%2C%20jak%20si%C4%99%20spisa%C4%87%20i%20odpowiedzie%C4%87%20na%20pytanie%20o%20wyznanie%20w%20zgodzie%20ze%20sob%C4%85.%0A%0AJeszcze%20si%C4%99%20wahasz%3F%20Odpowiemy%20na%20Twoje%20pytania%20i%20w%C4%85tpliwo%C5%9Bci.%0A%0Achcesieliczyc.pl%20%23ChceSieLiczyc%20%40chcesieliczyc"
                     target="_blank">
                 <img src="assets/icon/twitter-icon.svg" alt="Twitter">
             </a>
@@ -501,7 +501,7 @@
                     <a
                             title="Zatłituj o nas"
                             class="btn social-bottom__button social-bottom__button--twitter"
-                            href="https://twitter.com/intent/tweet?original_referer=https://chcesieliczyc.pl&text=Jakie%20wyznanie%20podasz%20w%20Spisie%20Powszechnym%3F%0A%0AWejd%C5%BA%20na%20chcesieliczyc.pl.%20Zobacz%2C%20jak%20si%C4%99%20spisa%C4%87%20i%20odpowiedzie%C4%87%20na%20pytanie%20o%20wyznanie%20w%20zgodzie%20ze%20sob%C4%85.%0A%0AJeszcze%20si%C4%99%20wahasz%3F%20Odpowiemy%20na%20Twoje%20pytania%20i%20w%C4%85tpliwo%C5%9Bci.%0A%0Achcesieliczyc.pl%20%23chcesieliczyc%20%40chcesieliczyc"
+                            href="https://twitter.com/intent/tweet?original_referer=https://chcesieliczyc.pl&text=Jakie%20wyznanie%20podasz%20w%20Spisie%20Powszechnym%3F%0A%0AWejd%C5%BA%20na%20chcesieliczyc.pl.%20Zobacz%2C%20jak%20si%C4%99%20spisa%C4%87%20i%20odpowiedzie%C4%87%20na%20pytanie%20o%20wyznanie%20w%20zgodzie%20ze%20sob%C4%85.%0A%0AJeszcze%20si%C4%99%20wahasz%3F%20Odpowiemy%20na%20Twoje%20pytania%20i%20w%C4%85tpliwo%C5%9Bci.%0A%0Achcesieliczyc.pl%20%23ChceSieLiczyc%20%40chcesieliczyc"
                             target="_blank">
                         <img src="assets/icon/twitter-invert-icon.svg" alt="[TW]" />
                         Twitter
@@ -529,7 +529,7 @@
             &copy; 2021 Inicjatywa „Chcę się liczyć”
         </p>
         <p class="footer__contact">
-            <a href="mailto:kontaktchsl@protonmail.com" class="footer-link footer-link--email">kontaktchsl@protonmail.com</a>
+            <a href="mailto:kontakt@chcesieliczyc.pl" class="footer-link footer-link--email">kontakt@chcesieliczyc.pl</a>
             &nbsp;
             <a href="https://facebook.com/chcesieliczyc" class="footer-link footer-link--facebook" target="_blank">
                 <img src="assets/icon/facebook-invert-icon.svg" alt="Facebook" />
