--- a/placeholder.html
+++ b/placeholder.html
@@ -103,7 +103,7 @@
     <img src="assets/icon/twitter-icon.svg" alt="Twitter" />
 </a>
 </p>
-<p>email: <a href="mailto:kontaktchsl@protonmail.com">kontaktchsl@protonmail.com</a></p>
+<p>email: <a href="mailto:kontakt@chcesieliczyc.pl">kontakt@chcesieliczyc.pl</a></p>
 
 <script>
     const doc = document;
