--- a/polityka-prywatnosci/index.html
+++ b/polityka-prywatnosci/index.html
@@ -173,7 +173,7 @@ b) Facebook Inc. Hacker Way, Menlo Park, California 94025, USA; developers.faceb
             &copy; 2021 Inicjatywa “Chcę się liczyć”
         </p>
         <p class="footer__contact">
-            <a href="mailto:kontaktchsl@protonmail.com" class="footer-link footer-link--email">kontaktchsl@protonmail.com</a>
+            <a href="mailto:kontakt@chcesieliczyc.pl" class="footer-link footer-link--email">kontakt@chcesieliczyc.pl</a>
             &nbsp;
             <a href="https://facebook.com/chcesieliczyc" class="footer-link footer-link--facebook" target="_blank">
                 <img src="../assets/icon/facebook-invert-icon.svg" alt="Facebook" />
